# libmaid

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  TODO  autogen.sh  build-protobuf-android.sh  build-protobuf-ios.sh  build_net.sh  build_proto.sh  build_proto_net.sh  configure.ac  generate_example_proto.sh  generate_net_proto.sh  generate_proto.sh
client/: channel.cpp  channel.h  controller.cpp  controller.h  controller.pb.cc  controller.pb.h  hello.pb.cc  hello.pb.h  main.cpp
example/echo/: client  client.cpp  echo.pb.cc  echo.pb.h  echo.proto  server  server.cpp
example/hello/: build.sh  client  client.cc  client.cpp  hello.pb.cc  hello.pb.h  hello.proto  hello_pb2.py  server  server.cc  server.cpp
example/hellov2/: build.sh  client  client.cc  client.cpp  hello.pb.cc  hello.proto  server  server.cc  server.cpp
example/net-db/: client  client.cpp  db.proto  leveldbimpl.cpp  leveldbimpl.h  server  server.cpp
example/net-db/lib/: libev.so.4.0.0
example/simple-net-db-use/: client  client.cpp  db.pb.cc  db.pb.h  player.pb.cc  player.pb.h  player.proto
include/: channel.h  closure.h  controller.h  controller.pb.h  define.h  maid.h
include/maid/: channel.h  connection.pb.h  connection.proto  controller.h  controller.pb.h  controller.proto  maid.h  middleware.pb.h  middleware.proto  options.pb.h  options.proto  session.pb.h  session.proto
lib/: libmaid.la
net/: README.md  build_example.sh  build_hello.sh  csc.txt
net/Plugins/: Controller.cs
net/ProtoGen/: ProtoGen.csproj
net/ProtoGen/Properties/: Resources.resx
net/example/: Hello.cs  protobuf-net.dll.mdb
net/maid/: maid 2012.sln  maid.sln
net/maid/Test/: Program.cs
net/maid/Test/Properties/: AssemblyInfo.cs
net/maid/example/: Program.cs  example.csproj
net/maid/example/proto/: Hello.cs  hello.cs
net/maid/maid/: Channel.cs  Controller.cs  maid.csproj
net/maid/maid/Properties/: AssemblyInfo.cs
net/precompile/: controller.cs
patches/: logging.cc
proto/: controller.proto  controller_pb2.py  hello.pb.cc  hello.proto  hello_pb2.py
python/: MANIFEST.in  requirement.txt  setup.py
python/example/: client.py  hello.proto  hello_pb2.py  server.py
python/maid/: __init__.py  channel.py  client.py  connection_pb2.py  controller.py  controller_pb2.py  middleware_pb2.py  options_pb2.py  session_pb2.py
server/: channel.cpp  channel.h  server.cpp
src/: base.cc  base.h  buffer.cc  buffer.cpp  buffer.h  callbacks.h  channel.cc  channel.cpp  channel.h  channel_factory.cc  channel_factory.h  channel_pool.cc  channel_pool.h  channelimpl.cc  channelimpl.cpp  channelimpl.h  closure.cc  closure.cpp  closure.h  component.h  connection.pb.cc  connection.proto  context.h  context_pool.cc  context_pool.h  controller.cc  controller.cpp  controller.h  controller.pb.cc  controller.pb.h  controller.proto  controllerimpl.cc  controllerimpl.cpp  controllerimpl.h  define.h  hello.pb.h  helper.cc  helper.h  middleware.pb.cc  mock.cc  (+12 more)
src/include/: channelimpl.h  context.h  controller.pb.h  controller.proto  controllerimpl.h  define.h  remoteclosure.h
src/middleware/: log_middleware.cc  log_middleware.h
test/: maid_buffer_test.cc  maid_channel_factory_test.cc  maid_channel_test.cc  maid_channelimpl_uv_failed_test.cc  maid_channelimpl_uv_success_test.cc  maid_closure_test.cc  maid_controller_test.cc  maid_controllerimpl_test.cc  maid_main.cc  maid_remoteclosure_test.cc  test.pb.cc  test.pb.h  test.proto
