ACLOCAL_AMFLAGS=-I m4
AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libmaid.la
libmaid_la_LDFLAGS=-static -static-protobuf -static-ev
libmaid_la_CFLAGS=-I../include
libmaid_la_CXXFLAGS=-I../include
libmaid_la_SOURCES=\
src/controller.cpp \
src/channel.h \
src/controller.pb.h \
src/channel.cpp \
src/controller.pb.cc \
src/closure.cpp \
src/channel.h.gch \
src/closure.h \
src/controller.h
