ACLOCAL_AMFLAGS=-I m4
AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libmaid.la
libmaid_la_CFLAGS=-I../include -ggdb
libmaid_la_CXXFLAGS=-I../include -ggdb
libmaid_la_SOURCES=\
src/controller.cpp \
src/channel.cpp \
src/controller.pb.cc \
src/closure.cpp \
lib/libprotobuf.a \
lib/libev.a \
lib/libsnappy.a
